Modified apis and integrated firebase cloud message service
