# routes/Note.js
@@ -9,12 +9,15 @@ router.get("/dashboard",(req,res)=> noteController.getDashboardNotes(req,res));
 
 router.get("/archive",(req,res)=> noteController.getArchiveNotes(req,res));
 
+router.get("/trash",(req,res)=> noteController.getTrashNotes(req,res));
 
 router.get("/:id",(req,res)=> noteController.getNote(req,res));
 
 router.post("",(req,res)=> noteController.addNote(req,res));
 
-router.put("/deleteForeverNotes",(req,res)=> noteController.deleteForeverNotes(req,res));
+router.delete("/trash",(req,res)=> noteController.deleteTrashNotes(req,res));
+
+router.delete("/trash/:id",(req,res)=> noteController.deleteTrashNote(req,res));
 
 router.delete("/:id",(req,res)=> noteController.deleteNote(req,res));
 
