# swagger.json
@@ -9,7 +9,7 @@
             "url": "https://opensource.org/licenses/MIT"
         }
     },
-    "host": "localhost:4000",
+    "host": "fundoonotes-backend.herokuapp.com",
     "basePath": "/api/",
     "schemes": [
         "http"
@@ -152,6 +152,27 @@
                 "responses": {}
             }
         },
+        "/notes/dashboard": {
+            "get": {
+                "tags": [
+                    "Note"
+                ],
+                "summary": "Get list of dashboard notes",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "header",
+                        "type": "string",
+                        "required": true,
+                        "description": "Authentication Token"
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {}
+            }
+        },
         "/notes/archive": {
             "get": {
                 "tags": [
@@ -173,12 +194,12 @@
                 "responses": {}
             }
         },
-        "/notes": {
+        "/notes/trash": {
             "get": {
                 "tags": [
                     "Note"
                 ],
-                "summary": "Get list of notes",
+                "summary": "Get list of trash/deleted notes",
                 "parameters": [
                     {
                         "name": "token",
@@ -193,11 +214,71 @@
                 ],
                 "responses": {}
             },
+            "delete": {
+                "tags": [
+                    "Note"
+                ],
+                "summary": "Delete multiple notes forever",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "header",
+                        "type": "string",
+                        "required": true,
+                        "description": "Authentication Token"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "required": false,
+                        "description": "Array of Notes Id",
+                        "schema": {
+                            "example":[{
+                                "_id": "5c1a342eea8c3b0bbb811zf0"
+                            }]
+                        }
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {}
+            }
+        },
+        "/notes/trash/{id}": {
+            "delete": {
+                "tags": [
+                    "Note"
+                ],
+                "summary": "Delete single note forever",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "header",
+                        "type": "string",
+                        "required": true,
+                        "description": "Authentication Token"
+                    },
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "type": "string",
+                        "required": true,
+                        "description": "Note Id"
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {}
+            }
+        },
+        "/notes": {
             "get": {
                 "tags": [
                     "Note"
                 ],
-                "summary": "Get list of notes",
+                "summary": "Get list of all notes",
                 "parameters": [
                     {
                         "name": "token",
@@ -259,7 +340,9 @@
                         "required": false,
                         "description": "Array of Notes Id",
                         "schema": {
-                            "$ref": "#/definitions/NotesId"
+                            "example":[{
+                                "_id": "5c1a342eea8c3b0bbb811zf0"
+                            }]
                         }
                     }
                 ],
@@ -334,43 +417,6 @@
         }
     },
     "definitions": {
-        "User": {
-            "required": [
-                "email",
-                "lastName",
-                "firstName",
-                "mobile"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "uniqueItems": true
-                },
-                "lastName": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string"
-                },
-                "mobile": {
-                    "type": "string"
-                }
-            }
-        },
-        "Login": {
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                }
-            }
-        },
         "Note": {
             "required": [
                 "note"
@@ -404,16 +450,6 @@
                     "type": "string"
                 }
             }
-        },
-        "NotesId": {
-            "example": [
-                {
-                    "_id": "5c1a342eea8c3b0bbb811zf0"
-                }
-            ]
-        },
-        "xml": {
-            "name": "Note"
         }
     }
 }
